TestRepo2/src/objects/Recipe_Non_Diageo_Product__c.object
<CustomObject>
    <fields>
        <fullName>API_External_ID__c</fullName>
        <displayFormat>NDP-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>API External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Alcoholic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alcoholic?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <label>Available</label>
        <picklist>
            <picklistValues>
                <fullName>FALSE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TRUE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>EN-US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EN-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT-BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Diageo_Ingredient_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non-Diageo Ingredient Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipe Non-Diageo Products</relationshipLabel>
        <relationshipName>Recipe_Non_Diageo_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Diageo_Product_External_Id__c</fullName>
        <description>FIeld that helps during dataload to prevent duplicates</description>
        <externalId>true</externalId>
        <label>Non-Diageo Product External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Recipe Non-Diageo Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>API_External_ID__c</columns>
        <columns>NAME</columns>
        <columns>Locale__c</columns>
        <columns>Alcoholic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recipe Non-Diageo Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipe Non-Diageo Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>